@@ -13,6 +13,9 @@ class RemoteCyberSourceRestTest < Test::Unit::TestCase
       month: 12,
       year: 2031)
 
+    @master_card = credit_card('2222420000001113', brand: 'master')
+    @discover_card = credit_card('6011111111111117', brand: 'discover')
+
     @apple_pay = network_tokenization_credit_card(
       '4111111111111111',
       payment_cryptogram: 'AceY+igABPs3jdwNaDg3MAACAAA=',
@@ -97,7 +100,6 @@ class RemoteCyberSourceRestTest < Test::Unit::TestCase
 
   def test_successful_authorize
     response = @gateway.authorize(@amount, @visa_card, @options)
-
     assert_success response
     assert response.test?
     assert_equal 'AUTHORIZED', response.message
@@ -347,5 +349,78 @@ class RemoteCyberSourceRestTest < Test::Unit::TestCase
     response = @gateway.authorize(@amount, @bank_account, @options.except(:billing_address))
     assert_failure response
     assert_equal 'Declined - The request is missing one or more fields', response.params['message']
+  end
+
+  def stored_credential_options(*args, ntid: nil)
+    @options.merge(stored_credential: stored_credential(*args, network_transaction_id: ntid))
+  end
+
+  def test_purchase_using_stored_credential_initial_mit
+    options = stored_credential_options(:merchant, :internet, :initial)
+    options[:reason_code] = '4'
+    assert auth = @gateway.authorize(@amount, @visa_card, options)
+    assert_success auth
+    assert purchase = @gateway.purchase(@amount, @visa_card, options)
+    assert_success purchase
+  end
+
+  def test_purchase_using_stored_credential_recurring_cit
+    options = stored_credential_options(:cardholder, :recurring, :initial)
+    options[:reason_code] = '4'
+    assert auth = @gateway.authorize(@amount, @visa_card, options)
+    assert_success auth
+    used_store_credentials = stored_credential_options(:cardholder, :recurring, ntid: auth.network_transaction_id)
+    used_store_credentials[:reason_code] = '4'
+    assert purchase = @gateway.purchase(@amount, @visa_card, used_store_credentials)
+    assert_success purchase
+  end
+
+  def test_purchase_using_stored_credential_recurring_mit
+    options = stored_credential_options(:merchant, :recurring, :initial)
+    options[:reason_code] = '4'
+    assert auth = @gateway.authorize(@amount, @visa_card, options)
+    assert_success auth
+    used_store_credentials = stored_credential_options(:merchant, :recurring, ntid: auth.network_transaction_id)
+    used_store_credentials[:reason_code] = '4'
+    assert purchase = @gateway.purchase(@amount, @visa_card, used_store_credentials)
+    assert_success purchase
+  end
+
+  def test_purchase_using_stored_credential_installment_cit
+    options = stored_credential_options(:cardholder, :installment, :initial)
+    options[:reason_code] = '4'
+    assert auth = @gateway.authorize(@amount, @visa_card, options)
+    assert_success auth
+    used_store_credentials = stored_credential_options(:cardholder, :installment, ntid: auth.network_transaction_id)
+    used_store_credentials[:reason_code] = '4'
+    assert purchase = @gateway.purchase(@amount, @visa_card, used_store_credentials)
+    assert_success purchase
+  end
+
+  def test_purchase_using_stored_credential_installment_mit
+    options = stored_credential_options(:merchant, :installment, :initial)
+    options[:reason_code] = '4'
+    assert auth = @gateway.authorize(@amount, @visa_card, options)
+    assert_success auth
+    used_store_credentials = stored_credential_options(:merchant, :installment, ntid: auth.network_transaction_id)
+    used_store_credentials[:reason_code] = '4'
+    assert purchase = @gateway.purchase(@amount, @visa_card, used_store_credentials)
+    assert_success purchase
+  end
+
+  def test_failure_stored_credential_invalid_reason_code
+    options = stored_credential_options(:cardholder, :internet, :initial)
+    assert auth = @gateway.authorize(@amount, @master_card, options)
+    assert_equal(auth.params['status'], 'INVALID_REQUEST')
+    assert_equal(auth.params['message'], 'Declined - One or more fields in the request contains invalid data')
+    assert_equal(auth.params['details'].first['field'], 'processingInformation.authorizationOptions.initiator.merchantInitiatedTransaction.reason')
+  end
+
+  def test_auth_and_purchase_with_network_txn_id
+    options = stored_credential_options(:merchant, :recurring, :initial)
+    options[:reason_code] = '4'
+    assert auth = @gateway.authorize(@amount, @visa_card, options)
+    assert purchase = @gateway.purchase(@amount, @visa_card, options.merge(network_transaction_id: auth.network_transaction_id))
+    assert_success purchase
   end
 end
