@@ -86,6 +86,7 @@
 * CheckoutV2: Update idempotency_key name [yunnydang] #4737
 * Payeezy: Enable external 3DS [jherreraa] #4715
 * Ebanx: Remove default email [aenand] #4747
+* CyberSourceRest: Add stored credentials support [jherreraa] #4707
 
 == Version 1.127.0 (September 20th, 2022)
 * BraintreeBlue: Add venmo profile_id [molbrown] #4512
